--- a/archives.html
+++ b/archives.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>OpenBlog</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="OpenBlog Atom Feed" />
+        <link rel="stylesheet" href="http://romgar.github.io/openblog/theme/css/main.css" />
+        <link href="http://romgar.github.io/openblog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="OpenBlog Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,10 +13,10 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">OpenBlog </a></h1>
+                <h1><a href="http://romgar.github.io/openblog/">OpenBlog </a></h1>
                 <nav><ul>
-                    <li><a href="/pages/about-us.html">About</a></li>
-                    <li><a href="/category/technical.html">Technical</a></li>
+                    <li><a href="http://romgar.github.io/openblog/pages/about-us.html">About</a></li>
+                    <li><a href="http://romgar.github.io/openblog/category/technical.html">Technical</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -24,7 +24,7 @@
 
 <dl>
     <dt>mar. 05 mai 2015</dt>
-    <dd><a href="/howto-manage-ghpages-project.html">How to manage GitHub Pages front-end project</a></dd>
+    <dd><a href="http://romgar.github.io/openblog/howto-manage-ghpages-project.html">How to manage GitHub Pages front-end project</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
@@ -40,7 +40,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://romgar.github.io/openblog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
