Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -16,11 +16,11 @@
                 <h1><a href="http://romgar.github.io/openblog/">OpenBlog </a></h1>
                 <nav><ul>
                     <li><a href="http://romgar.github.io/openblog/pages/about-us.html">About</a></li>
-                    <li><a href="http://romgar.github.io/openblog/category/technical.html">Technical</a></li>
+                    <li><a href="http://romgar.github.io/openblog/category/tech.html">Tech</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
-    <li><a href="http://romgar.github.io/openblog/category/technical.html">Technical</a></li>
+    <li><a href="http://romgar.github.io/openblog/category/tech.html">Tech</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
