--- a/archives.html
+++ b/archives.html
@@ -16,15 +16,15 @@
                 <h1><a href="http://romgar.github.io/openblog/">OpenBlog </a></h1>
                 <nav><ul>
                     <li><a href="http://romgar.github.io/openblog/pages/about-us.html">About</a></li>
-                    <li><a href="http://romgar.github.io/openblog/category/technical.html">Technical</a></li>
+                    <li><a href="http://romgar.github.io/openblog/category/tech.html">Tech</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for OpenBlog</h1>
 
 <dl>
-    <dt>mar. 05 mai 2015</dt>
-    <dd><a href="http://romgar.github.io/openblog/howto-manage-ghpages-project.html">How to manage GitHub Pages front-end project</a></dd>
+    <dt>dim. 05 avril 2015</dt>
+    <dd><a href="http://romgar.github.io/openblog/howto-manage-ghpages-project.html">How to manage GitHub Pages on front-end project</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
