Generate Pelican site

--- a/howto-manage-ghpages-project.html
+++ b/howto-manage-ghpages-project.html
@@ -158,7 +158,6 @@ We feel easily that it's not a clean way to manage it, we will have to manually 
                             <li><a href="http://getpelican.com/">Pelican</a></li>
                             <li><a href="http://python.org/">Python.org</a></li>
                             <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
@@ -166,8 +165,8 @@ We feel easily that it's not a clean way to manage it, we will have to manually 
                         <ul>
                             <li><a href="http://romgar.github.io/openblog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="https://twitter.com/jrmipp/">@jrmi</a></li>
+                            <li><a href="https://twitter.com/rgarrigues/">@rgarrigues</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
