--- a/tags.html
+++ b/tags.html
@@ -35,7 +35,6 @@
                             <li><a href="http://getpelican.com/">Pelican</a></li>
                             <li><a href="http://python.org/">Python.org</a></li>
                             <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
@@ -43,8 +42,8 @@
                         <ul>
                             <li><a href="http://romgar.github.io/openblog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="https://twitter.com/jrmipp/">@jrmi</a></li>
+                            <li><a href="https://twitter.com/rgarrigues/">@rgarrigues</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
