Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>OpenBlog - Authors</title>
-        <link rel="stylesheet" href="http://romgar.github.io/openblog/theme/css/main.css" />
-        <link href="http://romgar.github.io/openblog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="OpenBlog Atom Feed" />
+        <link rel="stylesheet" href="http://romgar.github.io/5minutes/theme/css/main.css" />
+        <link href="http://romgar.github.io/5minutes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="OpenBlog Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,17 +13,17 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://romgar.github.io/openblog/">OpenBlog </a></h1>
+                <h1><a href="http://romgar.github.io/5minutes/">OpenBlog </a></h1>
                 <nav><ul>
-                    <li><a href="http://romgar.github.io/openblog/pages/about-us.html">About</a></li>
-                    <li><a href="http://romgar.github.io/openblog/category/tech.html">Tech</a></li>
+                    <li><a href="http://romgar.github.io/5minutes/pages/about-us.html">About</a></li>
+                    <li><a href="http://romgar.github.io/5minutes/category/tech.html">Tech</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on OpenBlog</h1>
     <ul>
-        <li><a href="http://romgar.github.io/openblog/author/romain-garrigues.html">Romain Garrigues</a> (1)</li>
+        <li><a href="http://romgar.github.io/5minutes/author/romain-garrigues.html">Romain Garrigues</a> (1)</li>
     </ul>
 </section>
 
@@ -39,7 +39,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://romgar.github.io/openblog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://romgar.github.io/5minutes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="https://twitter.com/jrmipp/">@jrmi</a></li>
                             <li><a href="https://twitter.com/rgarrigues/">@rgarrigues</a></li>
