--- a/archives.html
+++ b/archives.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
         <meta charset="utf-8" />
-        <title>OpenBlog</title>
+        <title>5minutes</title>
         <link rel="stylesheet" href="http://romgar.github.io/5minutes/theme/css/main.css" />
-        <link href="http://romgar.github.io/5minutes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="OpenBlog Atom Feed" />
+        <link href="http://romgar.github.io/5minutes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="5minutes Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,17 +13,17 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://romgar.github.io/5minutes/">OpenBlog </a></h1>
+                <h1><a href="http://romgar.github.io/5minutes/">5minutes </a></h1>
                 <nav><ul>
                     <li><a href="http://romgar.github.io/5minutes/pages/about-us.html">About</a></li>
                     <li><a href="http://romgar.github.io/5minutes/category/tech.html">Tech</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
-<h1>Archives for OpenBlog</h1>
+<h1>Archives for 5minutes</h1>
 
 <dl>
-    <dt>dim. 05 avril 2015</dt>
+    <dt>mer. 08 avril 2015</dt>
     <dd><a href="http://romgar.github.io/5minutes/howto-manage-ghpages-project.html">How to manage GitHub Pages on front-end project</a></dd>
 </dl>
 </section>
