--- a/categories.html
+++ b/categories.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
         <meta charset="utf-8" />
-        <title>OpenBlog</title>
+        <title>5minutes</title>
         <link rel="stylesheet" href="http://romgar.github.io/5minutes/theme/css/main.css" />
-        <link href="http://romgar.github.io/5minutes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="OpenBlog Atom Feed" />
+        <link href="http://romgar.github.io/5minutes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="5minutes Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,7 +13,7 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://romgar.github.io/5minutes/">OpenBlog </a></h1>
+                <h1><a href="http://romgar.github.io/5minutes/">5minutes </a></h1>
                 <nav><ul>
                     <li><a href="http://romgar.github.io/5minutes/pages/about-us.html">About</a></li>
                     <li><a href="http://romgar.github.io/5minutes/category/tech.html">Tech</a></li>
