--- a/archives.html
+++ b/archives.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>5minutes</title>
-        <link rel="stylesheet" href="http://romgar.github.io/5minutes/theme/css/main.css" />
-        <link href="http://romgar.github.io/5minutes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="5minutes Atom Feed" />
+        <link rel="stylesheet" href="http://5minutes.youkidea.com/theme/css/main.css" />
+        <link href="http://5minutes.youkidea.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="5minutes Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,18 +13,18 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://romgar.github.io/5minutes/">5minutes </a></h1>
+                <h1><a href="http://5minutes.youkidea.com/">5minutes </a></h1>
                 <nav><ul>
-                    <li><a href="http://romgar.github.io/5minutes/pages/about-us.html">About</a></li>
-                    <li><a href="http://romgar.github.io/5minutes/category/tech.html">Tech</a></li>
+                    <li><a href="http://5minutes.youkidea.com/pages/about-us.html">About</a></li>
+                    <li><a href="http://5minutes.youkidea.com/category/tech.html">Tech</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for 5minutes</h1>
 
 <dl>
-    <dt>mer. 08 avril 2015</dt>
-    <dd><a href="http://romgar.github.io/5minutes/howto-manage-ghpages-project.html">How to manage GitHub Pages on front-end project</a></dd>
+    <dt>Wed 08 April 2015</dt>
+    <dd><a href="http://5minutes.youkidea.com/howto-manage-ghpages-project.html">How to manage GitHub Pages on front-end project</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
@@ -39,7 +39,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://romgar.github.io/5minutes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://5minutes.youkidea.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="https://twitter.com/jrmipp/">@jrmi</a></li>
                             <li><a href="https://twitter.com/rgarrigues/">@rgarrigues</a></li>
