--- a/categories.html
+++ b/categories.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>5minutes</title>
-        <link rel="stylesheet" href="http://romgar.github.io/5minutes/theme/css/main.css" />
-        <link href="http://romgar.github.io/5minutes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="5minutes Atom Feed" />
+        <link rel="stylesheet" href="http://5minutes.youkidea.com/theme/css/main.css" />
+        <link href="http://5minutes.youkidea.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="5minutes Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,14 +13,14 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://romgar.github.io/5minutes/">5minutes </a></h1>
+                <h1><a href="http://5minutes.youkidea.com/">5minutes </a></h1>
                 <nav><ul>
-                    <li><a href="http://romgar.github.io/5minutes/pages/about-us.html">About</a></li>
-                    <li><a href="http://romgar.github.io/5minutes/category/tech.html">Tech</a></li>
+                    <li><a href="http://5minutes.youkidea.com/pages/about-us.html">About</a></li>
+                    <li><a href="http://5minutes.youkidea.com/category/tech.html">Tech</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
-    <li><a href="http://romgar.github.io/5minutes/category/tech.html">Tech</a></li>
+    <li><a href="http://5minutes.youkidea.com/category/tech.html">Tech</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
@@ -34,7 +34,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://romgar.github.io/5minutes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://5minutes.youkidea.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="https://twitter.com/jrmipp/">@jrmi</a></li>
                             <li><a href="https://twitter.com/rgarrigues/">@rgarrigues</a></li>
