--- a/howto-manage-ghpages-project.html
+++ b/howto-manage-ghpages-project.html
@@ -148,6 +148,21 @@ We feel easily that it's not a clean way to manage it, we will have to manually 
 
 <p>Your tools, that were working on <code>dist</code> folder, will now generate new content on the project <code>gh-pages</code> branch, and you can commit them when you want.</p>
     </div><!-- /.entry-content -->
+    <div class="comments">
+      <h2>Comments !</h2>
+      <div id="disqus_thread"></div>
+      <script type="text/javascript">
+        var disqus_shortname = '5minutes-youkidea.disqus.com';
+        var disqus_identifier = 'howto-manage-ghpages-project.html';
+        var disqus_url = 'http://5minutes.youkidea.com/howto-manage-ghpages-project.html';
+        (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//5minutes-youkidea.disqus.com.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+      </script>
+      <noscript>Please enable JavaScript to view the comments.</noscript>
+    </div>
 
   </article>
 </section>
@@ -189,5 +204,14 @@ We feel easily that it's not a clean way to manage it, we will have to manually 
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
+<script type="text/javascript">
+    var disqus_shortname = '5minutes-youkidea.disqus.com';
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
 </body>
 </html>
