Generate Pelican site

--- a/howto-manage-ghpages-project.html
+++ b/howto-manage-ghpages-project.html
@@ -152,12 +152,12 @@ We feel easily that it's not a clean way to manage it, we will have to manually 
       <h2>Comments !</h2>
       <div id="disqus_thread"></div>
       <script type="text/javascript">
-        var disqus_shortname = '5minutes-youkidea.disqus.com';
+        var disqus_shortname = '5minutes-youkidea';
         var disqus_identifier = 'howto-manage-ghpages-project.html';
         var disqus_url = 'http://5minutes.youkidea.com/howto-manage-ghpages-project.html';
         (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//5minutes-youkidea.disqus.com.disqus.com/embed.js';
+        dsq.src = '//5minutes-youkidea.disqus.com/embed.js';
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
       </script>
@@ -205,7 +205,7 @@ We feel easily that it's not a clean way to manage it, we will have to manually 
     })();
     </script>
 <script type="text/javascript">
-    var disqus_shortname = '5minutes-youkidea.disqus.com';
+    var disqus_shortname = '5minutes-youkidea';
     (function () {
         var s = document.createElement('script'); s.async = true;
         s.type = 'text/javascript';
