--- a/archives.html
+++ b/archives.html
@@ -66,7 +66,7 @@
     })();
     </script>
 <script type="text/javascript">
-    var disqus_shortname = '5minutes-youkidea.disqus.com';
+    var disqus_shortname = '5minutes-youkidea';
     (function () {
         var s = document.createElement('script'); s.async = true;
         s.type = 'text/javascript';
