Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -24,7 +24,10 @@
     <h1>Tags for 5minutes</h1>
     <ul>
         <li><a href="http://5minutes.youkidea.com/tag/front-end.html">front-end</a> (1)</li>
-        <li><a href="http://5minutes.youkidea.com/tag/github.html">GitHub</a> (1)</li>
+        <li><a href="http://5minutes.youkidea.com/tag/github.html">GitHub</a> (2)</li>
+        <li><a href="http://5minutes.youkidea.com/tag/pypi.html">PyPi</a> (1)</li>
+        <li><a href="http://5minutes.youkidea.com/tag/python.html">python</a> (1)</li>
+        <li><a href="http://5minutes.youkidea.com/tag/travis-ci.html">travis-ci</a> (1)</li>
     </ul>
 </section>
 
