Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -24,7 +24,7 @@
 
 <dl>
     <dt>mar. 05 mai 2015</dt>
-    <dd><a href="http://5minutes.youkidea.com/howto-deploy-python-package-on-pypi-with-github-and-travis.html">How to deploy a python package on PyPi with GitHub and travis-ci</a></dd>
+    <dd><a href="http://5minutes.youkidea.com/howto-deploy-python-package-on-pypi-with-github-and-travis.html">How to deploy a python package on PyPi with GitHub and Travis CI</a></dd>
     <dt>mer. 08 avril 2015</dt>
     <dd><a href="http://5minutes.youkidea.com/howto-manage-ghpages-project.html">How to manage GitHub Pages on front-end project</a></dd>
 </dl>
