--- a/archives.html
+++ b/archives.html
@@ -7,7 +7,7 @@
         <link href="http://5minutes.youkidea.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="5minutes Atom Feed" />
 
         <!--[if IE]>
-            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+            <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 </head>
 
@@ -23,9 +23,9 @@
 <h1>Archives for 5minutes</h1>
 
 <dl>
-    <dt>mer. 06 mai 2015</dt>
+    <dt>Wed 06 May 2015</dt>
     <dd><a href="http://5minutes.youkidea.com/howto-deploy-python-package-on-pypi-with-github-and-travis.html">How to deploy a python package on PyPi with GitHub and Travis CI</a></dd>
-    <dt>mer. 08 avril 2015</dt>
+    <dt>Wed 08 April 2015</dt>
     <dd><a href="http://5minutes.youkidea.com/howto-manage-ghpages-project.html">How to manage GitHub Pages on front-end project</a></dd>
 </dl>
 </section>
@@ -63,7 +63,7 @@
     _gaq.push(['_trackPageview']);
     (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        ga.src = 'https://ssl.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
@@ -72,7 +72,7 @@
     (function () {
         var s = document.createElement('script'); s.async = true;
         s.type = 'text/javascript';
-        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        s.src = 'https://' + disqus_shortname + '.disqus.com/count.js';
         (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
     }());
 </script>
