--- a/tags.html
+++ b/tags.html
@@ -23,10 +23,13 @@
 <section id="content" class="body">
     <h1>Tags for 5minutes</h1>
     <ul>
+        <li><a href="http://5minutes.youkidea.com/tag/database.html">database</a> (1)</li>
+        <li><a href="http://5minutes.youkidea.com/tag/django.html">Django</a> (1)</li>
         <li><a href="http://5minutes.youkidea.com/tag/front-end.html">front-end</a> (1)</li>
         <li><a href="http://5minutes.youkidea.com/tag/github.html">GitHub</a> (2)</li>
         <li><a href="http://5minutes.youkidea.com/tag/pypi.html">PyPi</a> (1)</li>
         <li><a href="http://5minutes.youkidea.com/tag/python.html">python</a> (1)</li>
+        <li><a href="http://5minutes.youkidea.com/tag/tests.html">tests</a> (1)</li>
         <li><a href="http://5minutes.youkidea.com/tag/travis-ci.html">travis-ci</a> (1)</li>
     </ul>
 </section>
