Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -28,6 +28,7 @@
         <li><a href="http://5minutes.youkidea.com/tag/front-end.html">front-end</a> (1)</li>
         <li><a href="http://5minutes.youkidea.com/tag/github.html">GitHub</a> (2)</li>
         <li><a href="http://5minutes.youkidea.com/tag/management.html">Management</a> (1)</li>
+        <li><a href="http://5minutes.youkidea.com/tag/open-source.html">open-source</a> (1)</li>
         <li><a href="http://5minutes.youkidea.com/tag/pypi.html">PyPi</a> (1)</li>
         <li><a href="http://5minutes.youkidea.com/tag/python.html">python</a> (1)</li>
         <li><a href="http://5minutes.youkidea.com/tag/tests.html">tests</a> (1)</li>
