--- a/archives.html
+++ b/archives.html
@@ -24,6 +24,8 @@
     <dd><a href="http://5minutes.youkidea.com/why-should-we-talk-about-career-path.html">Why should we talk about career path</a></dd>
     <dt>lun. 07 novembre 2016</dt>
     <dd><a href="http://5minutes.youkidea.com/django-under-the-hood-2016-summary.html">Django Under the Hood 2016 summary</a></dd>
+    <dt>jeu. 07 juillet 2016</dt>
+    <dd><a href="http://5minutes.youkidea.com/open-source-in-companies.html">Why it is good for companies to contribute to the open-source world</a></dd>
     <dt>jeu. 25 février 2016</dt>
     <dd><a href="http://5minutes.youkidea.com/transactiontestcase-keepdb-django-issues.html">TransactionTestCase and keepdb issues in Django</a></dd>
     <dt>mer. 06 mai 2015</dt>
