--- a/why-should-we-talk-about-career-path.html
+++ b/why-should-we-talk-about-career-path.html
@@ -62,7 +62,7 @@ You want to work for company Y? What are the technologies they are using? Their 
 <li>You are a junior and just started working: the junior guide (in progress),</li>
 <li>You are mid-level developer and start noticing that you learn less these days in your company: the mid-level challenges (in progress),</li>
 <li>You are senior and currently really passive in your career: the full career guide (in progress),</li>
-<li>You are a manager and would like to help your reports to have a career plan: the career path session preparation and the career path session example (in progress),</li>
+<li>You are a manager and would like to help your reports to have a career plan: the <a href="http://5minutes.youkidea.com/prepare-your-career-path-session.html">career path session preparation</a> and the career path session example (in progress),</li>
 <li>You are a developer that starts having more of a tech lead role, as well as new management duties: the should-I-be-a-manager guide (in progress).</li>
 </ul>
     </div><!-- /.entry-content -->
