Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -21,7 +21,7 @@
 
 <dl>
     <dt>mer. 09 octobre 2019</dt>
-    <dd><a href="http://5minutes.youkidea.com/prepare-your-career-path-session.html">Prepape your career path session</a></dd>
+    <dd><a href="http://5minutes.youkidea.com/prepare-your-career-path-session.html">Prepare your career path session</a></dd>
     <dt>mer. 09 octobre 2019</dt>
     <dd><a href="http://5minutes.youkidea.com/why-should-we-talk-about-career-path.html">Why should we talk about career path</a></dd>
     <dt>lun. 07 novembre 2016</dt>
