--- a/archives.html
+++ b/archives.html
@@ -20,6 +20,8 @@
 <h1>Archives for 5minutes</h1>
 
 <dl>
+    <dt>sam. 12 octobre 2019</dt>
+    <dd><a href="http://5minutes.youkidea.com/summary-belong-peakon-2019.html">Summary of the Belong (by Peakon) 2019 conference</a></dd>
     <dt>mer. 09 octobre 2019</dt>
     <dd><a href="http://5minutes.youkidea.com/prepare-your-career-path-session.html">Prepare your career path session</a></dd>
     <dt>mer. 09 octobre 2019</dt>
