Generate Pelican site

--- a/summary-belong-peakon-2019.html
+++ b/summary-belong-peakon-2019.html
@@ -152,7 +152,7 @@ The 3 pillars around being a good leadership were for him:</p>
 <p>Detect points of interest in people to make them focus on the right things,</p>
 </li>
 <li>Guide people in your organisation,</li>
-<li>Grow emotionally, be an "adult" (I highly recommend <a href="https://www.amazon.co.uk/Emotional-Intelligence-Matter-More-Than/dp/0747528306">Emotional Intelligence</a> on that topic)),</li>
+<li>Grow emotionally, be an "adult" (I highly recommend <a href="https://www.amazon.co.uk/Emotional-Intelligence-Matter-More-Than/dp/0747528306">Emotional Intelligence</a> on that topic),</li>
 <li>Develop people skills (coaching/mentoring, ...)</li>
 </ul>
 <h1>Miscellaneous</h1>
